--- a/WolvenKit/Views/StatusBarView.xaml
+++ b/WolvenKit/Views/StatusBarView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.StatusBarView"
+<catel:UserControl x:Class="WolvenKit.Views.StatusBarView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,75 +12,105 @@
                    xmlns:hc="https://handyorg.github.io/handycontrol" 
 
                    mc:Ignorable="d"
-                   d:DesignWidth="300">
-    <UserControl.Resources>
-        <catel:BooleanToCollapsingVisibilityConverter x:Key="BooleanToCollapsingVisibilityConverter" />
+                   >
 
-        <Style TargetType="{x:Type StackPanel}">
-            <Setter Property="Orientation" Value="Horizontal" />
-            <Setter Property="HorizontalAlignment" Value="Right" />
-        </Style>
-    </UserControl.Resources>
 
-    <Grid HorizontalAlignment="Right">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources  RequestedTheme="Dark"/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="{x:Type StackPanel}">
+                <Setter Property="Orientation" Value="Horizontal" />
+                <Setter Property="HorizontalAlignment" Value="Right" />
+            </Style>
+            <catel:BooleanToCollapsingVisibilityConverter x:Key="BooleanToCollapsingVisibilityConverter" />
 
-        <StackPanel x:Name="stackPanel">
-            <StackPanel>
-                <Separator Background="{DynamicResource MahApps.Brushes.Accent3}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
-                    <Separator.LayoutTransform>
-                        <RotateTransform Angle="90" />
-                    </Separator.LayoutTransform>
-                </Separator>
+        </ResourceDictionary>
 
-                <TextBlock Text="Line "/>
-                <TextBlock Text="{Binding Line}"/>
 
-                <TextBlock Text="Column "/>
-                <TextBlock Text="{Binding Column}"/>
 
-                <Separator Background="{DynamicResource MahApps.Brushes.Accent3}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
-                    <Separator.LayoutTransform>
-                        <RotateTransform Angle="90" />
-                    </Separator.LayoutTransform>
-                </Separator>
+    </catel:UserControl.Resources>
+ 
+       
 
-                <TextBlock FontWeight="Bold" Text="{Binding Heading}"/>
+        <Grid HorizontalAlignment="Stretch" Width="auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-                <Separator Background="{DynamicResource MahApps.Brushes.Accent3}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
-                    <Separator.LayoutTransform>
-                        <RotateTransform Angle="90" />
-                    </Separator.LayoutTransform>
-                </Separator>
-            </StackPanel>
+            <StackPanel MaxHeight="20" x:Name="stackPanel">
+                <StackPanel>
+                    <Separator Background="{DynamicResource RegionBrush}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
+                        <Separator.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </Separator.LayoutTransform>
+                    </Separator>
+                    <Grid   >
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="5,0,5,0" x:Name="LoadingTextStatusBar" Text=""/> <!-- FIRSTRELEASE -->
+                        <hc:LoadingIndicator IsEnabled="True" Foreground="{DynamicResource RegionBrush}"  MaxHeight="25" Width="25" Style="{StaticResource  LoadingIndicatorGridsStyle}"></hc:LoadingIndicator>
 
-            <StackPanel Visibility="{Binding IsUpdatedInstalled, Converter={StaticResource BooleanToCollapsingVisibilityConverter}}">
-                <Image Width="16" Height="16" Source="{orctheming:FontImage {x:Static WolvenKit:FontAwesome.Download}}" 
+                    </StackPanel>
+
+                    </Grid>
+                    <Separator Background="{DynamicResource RegionBrush}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
+                        <Separator.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </Separator.LayoutTransform>
+                    </Separator>
+
+                    <TextBlock Text="Line "/>
+                    <TextBlock Text="{Binding Line}"/>
+
+                    <TextBlock Text="Column "/>
+                    <TextBlock Text="{Binding Column}"/>
+
+                    <Separator Background="{DynamicResource RegionBrush}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
+                        <Separator.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </Separator.LayoutTransform>
+                    </Separator>
+
+                    <TextBlock FontWeight="Bold" Text="{Binding Heading}"/>
+
+                    <Separator Background="{DynamicResource RegionBrush}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
+                        <Separator.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </Separator.LayoutTransform>
+                    </Separator>
+                </StackPanel>
+
+                <StackPanel Visibility="{Binding IsUpdatedInstalled, Converter={StaticResource BooleanToCollapsingVisibilityConverter}}">
+                    <Image Width="16" Height="16" Source="{orctheming:FontImage {x:Static WolvenKit:FontAwesome.Download}}" 
                     ToolTip="Update is installed, restart to enable new features" />
 
-                <Separator Background="{DynamicResource MahApps.Brushes.Accent3}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
-                    <Separator.LayoutTransform>
-                        <RotateTransform Angle="90" />
-                    </Separator.LayoutTransform>
-                </Separator>
+                    <Separator Background="{DynamicResource RegionBrush}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
+                        <Separator.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </Separator.LayoutTransform>
+                    </Separator>
+                </StackPanel>
+
+                <StackPanel>
+                    <TextBlock Text="{Binding ReceivingAutomaticUpdates}" />
+
+                    <Separator Background="{DynamicResource RegionBrush}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
+                        <Separator.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </Separator.LayoutTransform>
+                    </Separator>
+
+                    <TextBlock Text="{Binding Version}" />
+                </StackPanel>
+
+           
+
             </StackPanel>
+         
+        </Grid>
 
-            <StackPanel>
-                <TextBlock Text="{Binding ReceivingAutomaticUpdates}" />
+  
 
-                <Separator Background="{DynamicResource MahApps.Brushes.Accent3}" Margin="3,0,3,0" Width="{Binding ElementName=stackPanel, Path=ActualHeight}">
-                    <Separator.LayoutTransform>
-                        <RotateTransform Angle="90" />
-                    </Separator.LayoutTransform>
-                </Separator>
-
-                <TextBlock Text="{Binding Version}" />
-            </StackPanel>
-
-        
-
-        </StackPanel>
-    </Grid>
 </catel:UserControl>
